fix bugs (oauth), add auth endpoint
* fix bugs (oauth): the last version would overwrite user schema field with blank info when the exist user login via google oauth.
    - reason: if the element in struct is nil, it would be an empty element when it pass into mongo-driver collection function as parameter

* add auth endpoint: now you can use the /user/auth endpoint to verify the user status with token. For more details, please refer to the Swagger API
	modified:   README.md
	modified:   controllers/user.go
	modified:   main.go
	modified:   middlewares/auth.go
	modified:   models/user.go
	modified:   routers/user.go
	modified:   types/user.go
